--- a/src/index.html
+++ b/src/index.html
@@ -4,18 +4,24 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>js-hw-11</title>
-
+  <title>GoIt-js-hw-11</title>
   <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
 <body>
-  <form class="form">
-    <label>
-      <input type="text" name="searchText" placeholder="Search images..." required />
-    </label>
-    <button type="submit">Search</button>
-  </form>
+  <main>
+    <form class="form">
+      <label>
+        <input class="form-input" type="text" name="searchText" placeholder="Search images..." required>
+      </label>
+      <button class="btn" type="submit">Search</button>
+    </form>
+
+    <ul class="gallery"></ul>
+    <span class="loader is-hidden"></span>
+  </main>
+
+
 
   <script type="module" src="./main.js"></script>
 </body>
